recursion.logo.lessons.recursion.logo.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(0.2)
 required: Int
    spiral(100,0.2,1,2);
               ^